test: FileDBTest